--- a/src/root.css
+++ b/src/root.css
@@ -66,7 +66,7 @@ h1{
 	max-width: 1024px;
 	margin: 0 auto;
 }
-button{
+.main_button{
 	background-color: var(--purple);
     color: #fafafa;
     padding: 5px 30px;
