--- a/src/common/header/style.css
+++ b/src/common/header/style.css
@@ -12,9 +12,6 @@
     align-items: center;
 
 }
-.header_full_container div > a:first-of-type{
-    margin: 0 25px;
-}
 .header_login{
     width: 60%;
     background-color: #e5e5e5;
@@ -22,12 +19,37 @@
 .header_buttons{
     display: flex;
 }
-#dropdown-basic{
+.dropdown-toggle:first-of-type{
     border: none;
+    margin-right: 10px;
     background: none;
 }
-.dropdown_menu{
+.dropdown-menu{
     display: flex;
     flex-direction: column;
     background-color: #c6c6c6;
+    justify-content: center;
+    align-items: center;
+    padding: 15px 20px;
 }
+.dropdown-menu .dropdown-item{
+    margin: 10px 20px;
+}
+.dropdown-menu a{
+    text-decoration: none;
+    color: #333;
+}
+.dropdown-header{
+    font-weight: bolder;
+    margin: 15px 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.dropdown-header::after{
+    content:"";
+    background-color: #333;
+    width: 50%;
+    height: 2px;
+    margin: 3px 0;
+} 
