--- a/src/pages/signup/style.css
+++ b/src/pages/signup/style.css
@@ -1,15 +1,16 @@
-.form_container{
-    max-width: 1024px;
-    margin: 40px auto;
-    padding: 10px 30px;
-    background-color: #c6c6c6;
+.form_signup_container{
+    max-width: 820px;
+    margin: 20px auto;
+    padding: 5px 10px;
+    border-radius: 40px;
+    background-color: var(--yellow);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 
 }
-.form_container a{
+.form_signup_container a{
     text-decoration: none;
     font-size: 32px;
     width: fit-content;
@@ -30,26 +31,24 @@
     margin: 0 auto;
     font-size: 24px;
 }
-
-.form_container fieldset{
+.form_signup{
+    width: 80%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    margin-bottom: 20px;
+}
+.form_signup_container fieldset{
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-bottom: 20px !important;
+    
 }
-.form_container fieldset input{
-    background-color: #fafafa;
-    padding: 5px 0;
-    border: none;
-    color: #333;
-}
-.form_container fieldset select{
-    background-color: #fafafa;
-    padding: 5px 0;
-    border: none;
-    color: #333;
-}
-.form_container fieldset label{
+.form_signup_container label{
     font-size: 16px;
     padding-bottom: 5px;
+}
+.form_signup_container .main_button{
+    margin: 20px 0;
 }
