--- a/src/root.css
+++ b/src/root.css
@@ -3,16 +3,7 @@
    License: none (public domain)
 */
 
-:root{
-	font-family: sans-serif;
-	font-size: 16px;
-	--purple: #7a247d;
-	--cyan: #00ffff;
-	--blue: #29abe2;
-	--yellow: #f5c661;
-	--orange: #ff7e61;
 
-}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -59,6 +50,16 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+:root{
+	font-family: sans-serif;
+	font-size: 16px;
+	--purple: #7a247d;
+	--cyan: #00ffff;
+	--blue: #29abe2;
+	--yellow: #f5c661;
+	--orange: #ff7e61;
+
+}
 h1{
 	font-size: 48px;
 	text-align: center;
@@ -89,8 +90,9 @@ h1{
 	background-color: var(--blue);
 }
 .main_input{
+	box-shadow: 3px 3px #33333330;
 	background-color: #fafafa;
-	padding: 10px 0;
+	padding: 10px 0 10px 5px;
 	border-radius: 10px;
 	border: none;
 }
