--- a/src/common/header/style.css
+++ b/src/common/header/style.css
@@ -13,3 +13,48 @@ header .main_container{
     padding: 10px 0;
 }
 
+.header_buttons{
+    display: flex;
+
+}
+.dropdown-toggle{
+    background: none;
+    border: none;
+}
+.button_dropdown{
+    margin-right: 30px;
+}
+.dropdown-menu{
+    background-color: #c4c4c4;
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    align-items: center;
+}
+.dropdown-header{
+    font-size: 1.4rem;
+    color: #333;
+    margin: 10px 0;
+    display: flex;
+    flex-direction: column;
+}
+.dropdown-header::after{
+    content: "";
+    width: 100%;
+    height: 2px;
+    margin-top: 2px;
+    background-color: #333;
+}
+.dropdown-item{
+    width: 100%;
+    text-align: center;
+    padding: 15px 0;
+    text-decoration: none;
+    color: #333;
+}
+.dropdown-item:hover{
+    background-color: var(--purple);
+    color: #fafafa;
+    font-weight: bold;    
+}
+
