--- a/src/pages/client/restaurants/style.css
+++ b/src/pages/client/restaurants/style.css
@@ -1,17 +1,20 @@
 .index_grid_restaurants{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-
+    row-gap: 5px;
+    column-gap: 5px;
+    height: 500px;
+    overflow-y: scroll;
 }
 
 .index_grid_item{
     background-color: #e5e5e5;
-    padding: 10px;
-    margin: 5px;
+    padding: 30px 15px;
     display: flex;
 }
 .index_grid_item:hover{
-    background-color: rebeccapurple;
+    background-color: var(--purple);
+    color: #fafafa;
 }
 .index_grid_item div {
     display: flex;
@@ -33,6 +36,23 @@
     width: 40px;
     height: 40px;
     margin-right: 10px;
-
+}
+.restaurant_filter{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 10px;
+    margin: 25px 0;
+}
+.restaurant_filter input{
+    padding: 5px 0px 5px 5px;
+    background-color: var(--yellow);
+    border: none;
+    color: #fafafa;
+}
+.restaurant_filter select{
+    background-color: var(--yellow);
+    color: #333;
+    border: none;
 
 }
