--- a/src/root.css
+++ b/src/root.css
@@ -66,6 +66,24 @@ h1{
 	font-weight: bold;
 	color: var(--cyan);
 }
+h2{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	font-size: 48px;
+	margin-top: 60px;
+	margin-bottom: 10px;
+	text-align: center;
+	font-weight: bold;
+	color: #333;
+}
+h2::after{
+	content:"";
+	width: 1024px;
+	margin-top: 40px;
+	background-color: #c3c3c3;
+	height: 2px;
+}
 .main_container{
 	max-width: 1024px;
 	margin: 0 auto;
