--- a/src/root.css
+++ b/src/root.css
@@ -79,7 +79,7 @@ h2{
 }
 h2::after{
 	content:"";
-	width: 1024px;
+	min-width: 1024px;
 	margin-top: 40px;
 	background-color: #c3c3c3;
 	height: 2px;
