--- a/src/pages/client/cart/style.css
+++ b/src/pages/client/cart/style.css
@@ -4,3 +4,65 @@
 .modal{
     display: none;
 }
+
+.cart_order{
+    background-color: var(--yellow);
+    display: flex;
+    margin: 15px 0;
+    padding: 15px 30px;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+.product_name{
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+.product_price{
+    margin-bottom: 15px;
+}
+.cart_order div:first-child{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.product_remove{
+    display: none;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.4rem;
+    font-weight: bolder;
+    color: var(--cyan);
+    background-color: #33333350 ;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+.cart_order:hover .product_remove {
+    display: flex;
+}
+.title_cart{
+    font-size: 1.2rem;
+    font-weight: bold;
+    display: flex;
+    margin: 25px 0;
+    justify-content: space-between;
+    color: var(--purple);
+    text-decoration: none;
+}
+.cart_display{
+    display: flex;
+    flex-direction: column;
+}
+.div_buttons_cart{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+.div_buttons_cart .main_button{
+    margin-left: 30px;
+}
