--- a/src/pages/admin/list_users/style.css
+++ b/src/pages/admin/list_users/style.css
@@ -5,12 +5,11 @@
 .table_row{
     display: grid;
     grid-template-columns: 2fr 1fr 1fr;   
-
-}
-.table_row{
     padding: 20px 5px;
     background-color: var(--blue);
+    align-items: center;
 }
+
 .table_row:nth-child(2n){
     background-color: #f5f5f5;
 }
@@ -18,6 +17,10 @@
     font-weight: bolder;
     background-color: var(--yellow);
 
+}
+.table_row > div:last-child{
+    display: flex;
+    justify-content: space-around;
 }
 .table_main > div:last-child{
     display: grid;
